deploy/cloudflared/np/cf-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cf-dns
  namespace: cloudflared
spec:
  egress:
  - ports:
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector: {}
  policyTypes:
  - Egress
