deploy/cloudflared/np/cf-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cf-np-ie
  namespace: cloudflared
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: blog
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: blog
  - ports:
    - protocol: TCP
      port: 443
    - protocol: UDP
      port: 7844
    - protocol: TCP
      port: 7844
#    - protocol: UDP
#      port: 53
#    - protocol: TCP
#      port: 53
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
